--- a/my-demo/package.json
+++ b/my-demo/package.json
@@ -12,7 +12,8 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
