--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-use": "^17.5.1"
+    "react-use": "^17.5.1",
+    "reversifi-sdk": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
